--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Diaaeldin Taha Personal Page</title>
-    </head>
-    
-    <body>
-        <h1>Diaaeldin Taha</h1>
-        <p>dtaha [dot] personal [at] gmail [dot] com</p>
 
-        <h2>Research</h2>
-        <ul>
-            <li>On Cross Sections to the Geodesic and Horocycle Flows on Quotients of $SL(2, R)$ by Hecke Triangle Groups $G_q$.&nbsp;<a href="https://arxiv.org/abs/1906.07250">https://arxiv.org/abs/1906.07250</a></li>
-            <li>The Boca-Cobeli-Zaharescu Map Analogue for the Hecke Triangle Groups $G_q$. <a href="https://arxiv.org/abs/1810.10668">https://arxiv.org/abs/1810.10668</a></li>
-            <li>The Three Gap Theorem, Interval Exchange Transformations, and Zippered Rectangles. <a href="https://arxiv.org/abs/1708.04380">https://arxiv.org/abs/1708.04380</a></li>
-        </ul>
-        
-        <h2>Links</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/diaaeldin-taha-23a51b16/">LinkedIn</a></li>
-            <li><a href="https://www.researchgate.net/profile/Diaaeldin_Taha">ResearchGate</a></li>
-            <li><a href="https://math.washington.edu/people/diaaeldin-taha">University of Washington Alumni Page</a></li>
-        </ul>
-    </body>
+<head>
+    <title>Diaaeldin Taha Personal Page</title>
+</head>
+
+<body>
+    <h1>Diaaeldin Taha</h1>
+    <p>dtaha [dot] personal [at] gmail [dot] com</p>
+    <h2>Research</h2>
+    <ul>
+        <li>On Cross Sections to the Geodesic and Horocycle Flows on Quotients of $SL(2, R)$ by Hecke Triangle Groups
+            $G_q$.&nbsp;<a href="https://arxiv.org/abs/1906.07250">[arXiv]</a></li>
+        <li>The Boca-Cobeli-Zaharescu Map Analogue for the Hecke Triangle Groups $G_q$. <a
+                href="https://arxiv.org/abs/1810.10668">[arXiv]</a></li>
+        <li>The Three Gap Theorem, Interval Exchange Transformations, and Zippered Rectangles. <a
+                href="https://arxiv.org/abs/1708.04380">[arXiv]</a></li>
+    </ul>
+    <h2>Video Talks</h2>
+    <ul>
+        <li>On Cross Sections to Flows on Quotients by Hecke Groups [<a href="https://youtu.be/wQ5KNt1kOpc">YouTube</a>]
+        </li>
+        <li>A Gap Theorem Steinhaus Conjecture for General Interval Exchange Transformations via Zippered Rectangles [<a
+                href="https://youtu.be/fe4_Z46Bh-M">YouTube</a>]</li>
+    </ul>
+    <h2>Links</h2>
+    <h3>Personal</h3>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/diaaeldin-taha-23a51b16/">LinkedIn</a></li>
+        <li><a href="https://www.researchgate.net/profile/Diaaeldin_Taha">ResearchGate</a></li>
+        <li><a href="https://math.washington.edu/people/diaaeldin-taha">University of Washington Alumni Page</a></li>
+    </ul>
+</body>
+
 </html>
