--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
     <h2>Video Talks</h2>
     <ul>
-        <li>On Cross Sections to Flows on Quotients by Hecke Groups [<a href="https://youtu.be/wQ5KNt1kOpc">YouTube</a>]
+        <li>On Cross Sections to Flows on Quotients by Hecke Groups [<a href="https://youtu.be/wQ5KNt1kOpc">YouTube</a>][<a href="files/slides/bcz.pdf">Slides</a>]
         </li>
         <li>A Gap Theorem Steinhaus Conjecture for General Interval Exchange Transformations via Zippered Rectangles [<a
                 href="https://youtu.be/fe4_Z46Bh-M">YouTube</a>]</li>
